# Mini-Memory-Allocator

./: CMakeLists.txt  README.md
include/: AllocationStrategy.h  CommandFactories.h  Commands.h  MemoryAllocator.h  MemoryBlock.h  Parser.h  Statistics.h
src/: AllocationStrategy.cpp  CommandFactories.cpp  Commands.cpp  MemoryAllocator.cpp  MemoryBlock.cpp  Parser.cpp  Statistics.cpp  main.cpp
tests/: test_allocator_300.sh
tests/tests_allocator_300_results/: allocator_app  allocator_app_asan  details.txt  summary.txt
tests/tests_allocator_300_results/cases/: test_006_init-nonnumeric.expected  test_006_init-nonnumeric.in  test_007_init-extra.expected  test_007_init-extra.in  test_008_init-zero.actual  test_009_init-negative.in  test_010_alloc-missing.in  test_011_alloc-nonnumeric.actual  test_011_alloc-nonnumeric.in  test_012_alloc-extra.expected  test_012_alloc-extra.in  test_013_alloc-zero.actual  test_013_alloc-zero.in  test_014_alloc-negative.in  test_016_free-nonnumeric.expected  test_016_free-nonnumeric.in  test_017_free-extra.expected  test_017_free-extra.in  test_018_print-extra.expected  test_018_print-extra.in  test_019_stats-extra.actual  test_019_stats-extra.in  test_020_strategy-missing.actual  test_021_strategy-extra.actual  test_021_strategy-extra.in  test_022_strategy-unknown.in  test_023_exit-space-not-exit.in  test_025_mixed-case.in  test_026_alloc-before-init.actual  test_026_alloc-before-init.in  test_027_free-before-init.in  test_028_stats-before-init.expected  test_030_exact-exit.in  test_031_init-plus.expected  test_031_init-plus.in  (+534 more)
